--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+						<h1><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
