--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 	Built on the Spectral theme by HTML5UP -->
 <html>
 	<head>
-		<title>{{site.name }} - {{ post.title }}</title>
+		<title>{{site.name }} - {{ page.title }}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="" />
@@ -41,10 +41,9 @@
 
 				<!-- Main -->
 				<article id="main" >
-					<header>
-					</header>
+					<header><h2>{{ page.title }}</h2></header>
 					<section class="wrapper style5">
-					<div class="inner"><h2>{{ post.title }}</h2><br />{{ content }}</div>
+					<div class="inner"><br />{{ content }}</div>
 					</section>
 				</article>
 
